--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -212,6 +212,9 @@
             .img-sec{
                 margin-right: 10px//25px;
             }
+            .results{
+                line-height: 18px;
+            }
         }
         .data-overview{
             white-space: normal;
