--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -228,6 +228,9 @@
             .img-sec {
                 margin-right: 25px;
             }
+            .results{
+                line-height: 18px;
+            }
         }
     }
     .footer-simulate {
