--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -408,3 +408,12 @@
     top: 12px;
     cursor: pointer;
 }
+
+.kr-sg-dropdowns{
+    .kr-sg-input-search {
+        input.input-search.err-block{
+            background-color: rgb(255, 255, 255);
+            border-color: rgb(221, 54, 70);
+        }
+    }
+}
