--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -395,7 +395,8 @@
 				<div class="kr-sg-dropdowns kr_sg_dropdowns mb-2 pb-1 pt-4">
 					<div class="label-text">Search Configuration</div>
 					<div class="dropdown dropdown-open">
-						<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newConfigObj.config_name===''?'Select Search Configuration to be cloned':newConfigObj.config_name}}</button>                                            
+						<button class="dropdown-toggle dropdown-input" [ngClass]="{'err-block' : (!newConfigObj.config_name.length && submitted)}" data-toggle="dropdown">{{newConfigObj.config_name===''?'Select Search Configuration to be cloned':newConfigObj.config_name}}</button>
+						<img *ngIf="(newConfigObj.method === 'clone') && !newConfigObj.config_name.length && submitted" id="searchConfigWarning" src="assets/icons/warning_escalation.svg" style="top: 29%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
 						<ul class="dropdown-menu content-menu">
 						<li *ngFor="let config of queryConfigs" (click)="selectConfig(config)"><a>{{config.name}}</a></li>                                              
 						</ul>
@@ -404,12 +405,13 @@
 			</ng-container> 
 			<div class="kr-sg-input-text pt-3">
 				<div class="label-text">{{newConfigObj.method==='clone'?'Search Configuration Name':'Configuration Name'}}</div>
-				<input type="text" placeholder="{{newConfigObj.method==='clone'?'Name the New Search Configuration':'Enter Name'}}" [(ngModel)]="newConfigObj.name" class="input-text">
+				<input type="text" [ngClass]="{'err-block' : (!newConfigObj.name.length && submitted)}" placeholder="{{newConfigObj.method==='clone'?'Name the New Search Configuration':'Enter Name'}}" [(ngModel)]="newConfigObj.name" class="input-text">
+				<img *ngIf="!newConfigObj.name.length && submitted" id="searchNameWarning" src="assets/icons/warning_escalation.svg" style="top: 70%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
 			</div>	
 		</div>
 		</perfect-scrollbar> 
 		<div class="modal-footer text-left">
-			<button type="button" [disabled]="!newConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createConfig()">{{newConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
+			<button type="button" class="kr-sg-button-primary btn_lg float-right" (click)="createConfig()">{{newConfigObj.method==='clone'?'Clone':'Add'}}</button><!-- [disabled]="!newConfigObj.name" -->
 			<button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">Cancel</button>
 		</div>    
 	</kr-modal>
@@ -435,7 +437,8 @@
 				<div class="kr-sg-dropdowns kr_sg_dropdowns mb-2 pb-1 pt-4">
 					<div class="label-text">Index Configuration</div>                            
 					<div class="dropdown dropdown-open">
-						<button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newIndexConfigObj.index_config_name===''?'Select Index Configuration to be cloned':newIndexConfigObj.index_config_name}}</button>                                            
+						<button class="dropdown-toggle dropdown-input" [ngClass]="{'err-block' : (!newIndexConfigObj.index_config_name.length && submitted)}" data-toggle="dropdown">{{newIndexConfigObj.index_config_name===''?'Select Index Configuration to be cloned':newIndexConfigObj.index_config_name}}</button>
+						<img *ngIf="(newIndexConfigObj.method === 'clone') && !newIndexConfigObj.index_config_name.length && submitted" id="indexNameWarning" src="assets/icons/warning_escalation.svg" style="top: 29%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
 						<ul class="dropdown-menu content-menu">
 						<li *ngFor="let config of indexConfigs" (click)="selectIndexConfig(config)"><a>{{config.name}}</a></li>                                              
 						</ul>
@@ -444,12 +447,13 @@
 			</ng-container> 
 			<div class="kr-sg-input-text pt-4">
 				<div class="label-text">{{newIndexConfigObj.method==='clone'?'Index Configuration Name':'Name of Index Configuration'}}</div>
-				<input type="text" placeholder="{{newIndexConfigObj.method==='clone'?'Name the New Index Configuration':'Enter Name'}}" [(ngModel)]="newIndexConfigObj.name" class="input-text">
+				<input type="text" [ngClass]="{'err-block' : (!newIndexConfigObj.name.length && submitted)}" placeholder="{{newIndexConfigObj.method==='clone'?'Name the New Index Configuration':'Enter Name'}}" [(ngModel)]="newIndexConfigObj.name" class="input-text">
+				<img *ngIf="!newIndexConfigObj.name.length && submitted" id="indexNameWarning" src="assets/icons/warning_escalation.svg" style="top: 72%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
 			</div>	
 		</div>
 		</perfect-scrollbar> 
 		<div class="modal-footer text-left">
-			<button type="button" [disabled]="!newIndexConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createIndexConfig()">{{newIndexConfigObj.method==='clone'?'Clone':'Add'}}</button>                   
+			<button type="button" class="kr-sg-button-primary btn_lg float-right" (click)="createIndexConfig()">{{newIndexConfigObj.method==='clone'?'Clone':'Add'}}</button> <!-- [disabled]="!newIndexConfigObj.name" -->
 			<button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeIndexModalPopup()">Cancel</button>
 		</div>    
 	</kr-modal>
