Until the current Training is finished, disabled the click. FLY- 1978

--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -365,6 +365,7 @@
                 transition: 0.2s all ease;   
                 &.active-train{
                     background: #E7F1FF;
+                    pointer-events: none;
                     .loader-train{
                         background: #FFFFFF;
                         border: 1px solid #F3F8FF;
