tool tip for range slider code changes

--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -203,9 +203,9 @@
             top: -1px;
         }
     }
-    .tooltip {
-        display: none !important;
-    }
+    // .tooltip {
+    //     display: none !important;
+    // }
 }
 
 ::ng-deep.accor-scroll,
