--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="col-4 sliderContainer">
                             <div class="range-slider">
-                                <app-range-slider [customClass]='"weightsSlider"'  placement="top-center" container='body' ngbTooltip="{{weightModal.sliderObj.default}}" [allData]='weightModal.sliderObj' (valueEvent)="valueEvent($event,weightModal)"></app-range-slider>
+                                <app-range-slider [customClass]='"weightsSlider"'  [allData]='weightModal.sliderObj' (valueEvent)="valueEvent($event,weightModal)"></app-range-slider>
                             </div>
                             <div class="sliderVal">{{weightModal.sliderObj.default}}</div>
                             <div class="action_links" *ngIf="weightModal.isField  && (currentEditIndex !== i)">
