--- a/findly-builder/src/app/helpers/components/range-slider/range-slider.component.scss
+++ b/findly-builder/src/app/helpers/components/range-slider/range-slider.component.scss
@@ -40,22 +40,50 @@
       }
       .tooltip-main{
           min-width: 40px;
-          top: 8px !important;
+          top: 4px !important;
           z-index:1;
           margin-left:-20px !important;
           opacity: 1;
-          .tooltip-arrow{ display: none; }
+          .tooltip-arrow{ display: flex; }
+          .tooltip-arrow{ 
+            &::before{
+                content: "";
+                position: absolute;
+                width: 10px;
+                height: 10px;
+                background: #202124;
+                bottom: -2px;
+                left: 10px;
+                transform: rotate(45deg);
+                z-index: -1;
+            }
+         }
           .tooltip-inner {
-              min-width: 26px !important;
-              padding: 0px;
-              max-width: 50px;
-              text-align: center;
-              color:#202124;
-              border-radius: 0px;
-              background-color: #fff;
-              box-shadow: none;
-              border: none;
-              font-size: 10px;
+            //   min-width: 26px !important;
+            //   padding: 0px;
+            //   max-width: 50px;
+            //   text-align: center;
+            //   color:#202124;
+            //   border-radius: 0px;
+            //   background-color: #fff;
+            //   box-shadow: none;
+            //   border: none;
+            //   font-size: 10px;
+            max-width: 50px;
+            text-align: center;
+            color: #fff;
+            background-color: #fff;
+            box-shadow: none;
+            border: none;
+            background: #202124;
+            border-radius: 4px;
+            padding: 2px 0;
+            width: 30px;
+            height: 25px;
+            font-weight: 600;
+            font-size: 10px;
+            line-height: 20px;
+            z-index: 999999;
           }
       }
       width:300px;
