--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -3,15 +3,19 @@
         <div class="title">Usage Log</div>
         <!-- <div class="d-flex align-items-center">
             <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
-                <input type="text" placeholder="Search" class="input-search"  [ngClass]="{'pl-33':!searchUsageLog, 'pl-2':searchUsageLog}" autocomplete="off" [(ngModel)]="searchUsageLog" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                <input type="text" placeholder="Search" class="input-search"  [ngClass]="{'pl-33':!searchUsageLog, 'pl-2':searchUsageLog}" autocomplete="off" [(ngModel)]="searchUsageLog" (keyup)="searchUsageLogs()" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchUsageLog">
-                <img class="close-icon" *ngIf="searchUsageLog" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchUsageLog}" (click)="searchUsageLog='';toggleSearch()">
+                <img class="close-icon" *ngIf="searchUsageLog" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchUsageLog}" (click)="searchUsageLog='';searchUsageLogs();toggleSearch();">
             </div>           
             <div class="seach-block">
                 <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" (click)="toggleSearch()"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
             </div> 
+            <div class="download-icon" tooltipClass="tooltip_custom margin-10" placement="bottom-right" container='body' ngbTooltip="Download Log" (click)="exportUsageLog()">
+                <img src="assets/icons/usage-log/download.svg">
+            </div>
         </div> -->
+
     </div>
     <div class="plan-type">
         <div class="current-plan">Current Plan</div>
@@ -101,7 +105,7 @@
                 </div>                
             </div>
 
-            <ng-container  *ngFor="let usageLog of usageLogs | fieldsFilter: [ searchUsageLog, 'query']">
+            <ng-container  *ngFor="let usageLog of usageLogs">
                 <div class="table_body row">
                     <div class="col-4 title search-query-data">
                         <div class="img-block">
