--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -176,7 +176,8 @@
 
             <div class="kr-sg-input-text mb-5">
                 <div class="label-text">{{ "businessRules.rule_name" | translate }}</div>
-                <input type="text" placeholder="Rule Name" class="input-text" [(ngModel)]="addEditRuleObj.ruleName" />
+                <input type="text" placeholder="Rule Name" class="input-text" [(ngModel)]="addEditRuleObj.ruleName" [ngClass]="{'err-block' : (!addEditRuleObj.ruleName.length && submitted)}"/>
+                <img *ngIf="!addEditRuleObj.ruleName && submitted" id="ruleNameWarning" src="assets/icons/warning_escalation.svg" style="top: 60%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
             </div>
             <div class="rules-block row">
                 <div class="condition-add-text col-3 pl-0 pr-4">
@@ -209,8 +210,8 @@
                                         <div class="kr-sg-dropdowns w-auto" ngbDropdown (click)="currentEditInex = index" *ngIf="ruleObj.contextType !=='userContext'">
                                             <div class="dropdown dropdown-open">
                                                 <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>
-                         {{"businessRules." + ruleObj.contextCategory | translate}}
-                        </button>
+                                                {{"businessRules." + ruleObj.contextCategory | translate}}
+                                                </button>
                                                 <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
                                                     <li ngbDropdownItem *ngFor=" let contextCategory of ruleOptions[ruleObj.contextType]" (click)="ruleSelection(ruleObj,contextCategory,'contextCategory')" [ngClass]="{'active':ruleObj.contextCategory===contextCategory}">
                                                         {{"businessRules." + contextCategory | translate}}
@@ -480,8 +481,8 @@
         </div>
     </perfect-scrollbar>
     <div class="modal-footer">
-        <button class="kr-sg-button-primary btn_lg" *ngIf="addEditRuleObj._id" [disabled]="!addEditRuleObj.ruleName" (click)="updateRule(addEditRuleObj)"> Save</button>
-        <button class="kr-sg-button-primary btn_lg" *ngIf="!addEditRuleObj._id" [disabled]="!addEditRuleObj.ruleName" (click)="createRule()">ADD</button>
+        <button class="kr-sg-button-primary btn_lg" *ngIf="addEditRuleObj._id"  (click)="updateRule(addEditRuleObj)"> Save</button>
+        <button class="kr-sg-button-primary btn_lg" *ngIf="!addEditRuleObj._id"  (click)="createRule()">ADD</button>
         <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">{{addEditRuleObj._id?"Cancel":"Back"}}</button>
     </div>
 </kr-modal>
