--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -107,8 +107,9 @@
         <div class="modal-body">
             <div class="kr-sg-input-text trait-group-name">
                 <div class="label-text">Trait Group Name</div>
-                <input type="text" autocomplete="off" placeholder="Enter Trait Group" class="input-text" maxlength="120" [(ngModel)]="traits.addEditTraits.groupName">
+                <input type="text" autocomplete="off" placeholder="Enter Trait Group" class="input-text" maxlength="120" [(ngModel)]="traits.addEditTraits.groupName" [ngClass]="{'err-block' : (!traits.addEditTraits.groupName && submitted)}">
                 <div class="eg-text">Eg: Vehicle type , Class</div>
+                <img *ngIf="!traits.addEditTraits.groupName && submitted" id="traitGroupNameWarning" src="assets/icons/warning_escalation.svg" style="top: 39%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
             </div>
 
             <div class="kr-sg-input-text add-traits-input">              
@@ -141,7 +142,7 @@
         </div>
     </perfect-scrollbar>
     <div class="modal-footer">
-        <button class="kr-sg-button-primary btn_lg" [disabled]="!traits.addEditTraits.groupName" (click)="saveTraits(traits.addEditTraits)">Save</button>
+        <button class="kr-sg-button-primary btn_lg" (click)="saveTraits(traits.addEditTraits)">Save</button>
         <button class="kr-sg-button-secondary btn_lg"  (click)="closeStatusModal()">Cancel</button>
     </div>
 </kr-modal> 
