--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -566,6 +566,10 @@
                         .mat-chip {
                             margin: 3px;
                         }
+                        .mat-chip.firstChip{
+                            background-color: #d3d4d6;
+                           
+                        }
                     }
                 }
             }
