--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -14,7 +14,7 @@
             .nav-item{
                 margin-bottom: 0;
                 margin-right: 60px;
-                pointer-events: none;
+                cursor: pointer;
                 .nav-link{
                     padding: 0;
                     border: 0;
