--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -13909,3 +13909,7 @@ button.search-button:disabled {
    .bot-actions-customize-info .info-text{
        margin-left:10px
    }
+   
+   .structured-data-outer-wrap {
+        margin-bottom: 10px;
+    }
