--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
@@ -45,6 +45,7 @@
             }
             .modal-body{
                 padding: 0px 15px 10px 15px !important;
+                height:500px;
                 .mian-title-desc{
                     color: #202124;
                     font-weight: normal;
